--- a/hw_5/css/style.css
+++ b/hw_5/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    max-width: 100%;
+    max-width: 1600px;
     width: 100%;
     overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
