--- a/hw_5/css/style.css
+++ b/hw_5/css/style.css
@@ -19,7 +19,6 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /*margin: 50px 240px;*/
 }
 .header-logo {
     width: 49px;
@@ -40,12 +39,12 @@ header {
     margin-left: 0px;
     text-decoration: none;
     color: #4B5D68;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
     cursor: pointer;
 }
 .header-items>p:hover {
-    color: firebrick;
+    color: blue;
     font-size: 20px;
 }
 
@@ -62,7 +61,8 @@ header {
     cursor: pointer;
 }
 .header-button:hover {
-    background-color: green;
+    background-color: greenyellow;
+    opacity: 0.5;
 }  
 .data-img {
     background-image: url(../image/img/image1.jpg);
@@ -148,20 +148,21 @@ header {
 }
 .features {
     position: absolute;
-    width: 1200px;
-    height: 800px;
+    width: 1137px;
+    height: 1002px;
     left: 220px;
     top: 1600px;
     padding-left: 19px;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 .wrapper-one {
     height: 160px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 150px;
 }
@@ -179,12 +180,12 @@ header {
     text-align: center;
 }
 .wrapper-wrap {
-    width: 1200px;
-    top: 150px;
+    /*width: 1117px;
+    height: 1152px;*/
+    top: 150px; 
     display: flex;
     flex-direction: row;
-    align-items: flex-start; 
-    flex-wrap: wrap;   
+    flex-wrap: wrap;
 }
 .wrapper-two {
     width: 520px;
@@ -219,7 +220,7 @@ header {
     padding-top: 20px ;
     text-align: left;
 }
-.wrapper-two-txt>a {
+.btn-learn {
     font-weight: 900;
     font-size: 16px;
     color: #212353;
@@ -228,11 +229,13 @@ header {
     text-decoration: none;
     cursor: pointer;
 }
+.btn-learn:hover {
+    color: green;
+    opacity: 0.5;
+}
 .wrapper-three {
-    width: 520px;
-    height: 355px;
-    left: 239px;
-    top: 1843px;
+    width: 527px;
+    height: 303px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -261,20 +264,10 @@ header {
     padding-top: 20px ;
     text-align: left;
 }
-.wrapper-three-txt>a {
-    font-weight: 900;
-    font-size: 16px;
-    color: #212353;
-    padding-top: 20px;
-    text-align: left;
-    text-decoration: none;
-    cursor: pointer;
-}
+
 .wrapper-four {
-    width: 520px;
-    height: 355px;
-    left: 239px;
-    top: 1843px;
+    width: 527px;
+    height: 303px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -303,20 +296,10 @@ header {
     padding-top: 20px ;
     text-align: left;
 }
-.wrapper-four-txt>a {
-    font-weight: 900;
-    font-size: 16px;
-    color: #212353;
-    padding-top: 20px;
-    text-align: left;
-    text-decoration: none;
-    cursor: pointer;
-}
+
 .wrapper-five {
-    width: 520px;
-    height: 355px;
-    left: 239px;
-    top: 1843px;
+    width: 527px;
+    height: 303px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -345,12 +328,250 @@ header {
     padding-top: 20px ;
     text-align: left;
 }
-.wrapper-five-txt>a {
+.container {
+    position: absolute;
+    width: 1118px;
+    height: 709px;
+    left: 242px;
+    top: 2789px;
+    background: #9C69E2;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 93px;
+    padding-top: 109px;
+}
+.testimonials {
+    font-weight: bold;
+    font-size: 36px;
+    color: #FFFFFF;
+}
+.blogger {
+    border-radius: 20px;
+    width: 949px;
+    height: 330px;
+    box-shadow:  0px 20px 0px rgba(80, 27, 155, 0.5);
+    background: #FFFFFF;
+    display: flex;
+    justify-content: center;
+}
+.person-info {
+    width: 132.42px;
+    height: 90px;
+    margin: 60px 44px 180px 102px;
+}
+.blogger-info{
+    width: 566px;
+    height: 200px;
+    margin: 80px 103px 50px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.first-name {
+    font-weight: 900;
+    font-size: 18px;
+    color: #212353;
+}
+.blogger-info>a {
+    font-weight: 500;
+    font-size: 14px;
+    color: #9C69E2;
+    cursor: pointer;
+}
+.blogger-info>p {
+    font-weight: 400;
+    font-size: 18px;
+    color: #4B5D68;
+}
+.navigation {
+    width: 949px;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.blogger-info>a:hover {
+    color: indigo;
+    font-size: 18px;
+}
+#left-arrow {
+    width: 40px;
+    height: 14px;
+    text-decoration: none;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+#right-arrow {
+    text-decoration: none;
+    cursor: pointer;
+}
+.container-two {
+    display: flex;
+    justify-content: space-between;
+}
+.for-free {
+    position: absolute;
+    width: 584px;
+    height: 101px;
+    left: 240px;
+    top: 3750px;
+    margin-right: 123px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.for-free>h2 {
+    font-weight: bold;
+    font-size: 40px;
+    color: #212353;
+}
+.for-free>p{
+    font-weight: 500;
+    font-size: 18px;
+    color: #4B5D68;
+}
+.first-btn{
+    position: absolute;
+    width: 170px;
+    height: 60px;
+    background: #F063B8;
+    border-radius: 50px;
+    left: 947px;
+    top: 3771px;
+    font-weight: 900;
+    font-size: 18px;
+    color: #FFFFFF;
+    border: 0;
+    cursor: pointer;
+}
+.second-btn{
+    position: absolute;
+    width: 210px;
+    height: 60px;
+    left: 1147px;
+    top: 3771px;
     font-weight: 900;
     font-size: 16px;
     color: #212353;
-    padding-top: 20px;
-    text-align: left;
-    text-decoration: none;
+    background: #FFFFFF;
+    box-shadow: 0px 5px 5px rgba(75, 93, 104, 0.1);
+    border-radius: 50px;
+    border: 0;
     cursor: pointer;
+}
+.first-btn:hover {
+    opacity: 0.5;
+}
+.second-btn:hover {
+    background-color: teal;
+    opacity: 0.5;
+}
+.footer-content {
+    position: absolute;
+    width: 1117px;
+    height: 408px;
+    left: 240px;
+    top: 4001px;
+    display: flex;
+    justify-content: space-between;
+}
+.adress {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+#data-warehouse {
+    width: 153px;
+    height: 30px;
+    font-weight: 900;
+    font-size: 22px;
+    color: #212353;
+}
+.street{
+    font-weight: 500;
+    font-size: 16px;
+    margin-top: 60px; 
+    color: #212353;
+}
+.street-ave {
+    font-weight: 500;
+    font-size: 16px; 
+    color: #212353;
+}
+.nav {
+    font-weight: 400;
+    font-size: 16px;
+    margin-top: 10px;
+    color: #212353;
+    cursor: pointer;
+}
+.nav:hover {
+    font-size: 18px;
+    opacity: 0.7;
+}
+#data-warehouse:hover {
+    font-size: 24px;
+    opacity: 0.7;
+}
+
+.about{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.about>ul>li {
+    font-weight: 400;
+    font-size: 16px;
+    margin-top: 30px;
+    color: #212353;
+    list-style-type: none;
+    cursor: pointer;
+}
+.about>ul>li:hover {
+    font-size: 18px;
+    opacity: 0.7;
+}
+ul{
+    font-weight: 900;
+    font-size: 20px;
+    color: #212353;
+}
+.help>ul>li {
+    font-weight: 400;
+    font-size: 16px;
+    margin-top: 30px;
+    color: #212353;
+    list-style-type: none;
+    cursor: pointer;
+}
+.help>ul>li:hover {
+    font-size: 18px;
+    opacity: 0.7;
+}
+.media>p {
+    font-weight: 900;
+    font-size: 20px;
+    margin-bottom: 30px;
+    color: #212353;
+} 
+
+.media>a:hover {
+    background-color: darkcyan;
+}
+.footer-end>p{
+    position: absolute;
+    width: 360px;
+    height: 50px;
+    left: 240px;
+    top: 4354px;
+    font-size: 18px;
+    color: #212353;
+}
+.footer-end>img {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    left: 1297px;
+    top: 4349px;
 }
