--- a/hw_6/css/style.css
+++ b/hw_6/css/style.css
@@ -46,6 +46,10 @@ table {
     padding-right: 10px;
     color: #fff;
 }
+.checkbox {
+    border: 1px solid gray;
+    background-color: rgb(53, 53, 53);
+}
 
 .search-area {
     border: 1px solid gray;
