--- a/hw_5/css/style.css
+++ b/hw_5/css/style.css
@@ -9,9 +9,9 @@ body {
     max-width: 1600px;
     width: 100%;
     font-family: 'Roboto', sans-serif;
-    background-color: linear-gradient(180deg, #F6FAFD 0%, #FFFFFF 19.4%);
-    
+    background-color: linear-gradient(180deg, #F6FAFD 0%, #FFFFFF 19.4%);  
 }
+
 header {
     width: 100%;
     height: 60px;
@@ -20,12 +20,14 @@ header {
     justify-content: space-around;
     align-items: center;
 }
+
 .header-logo {
     width: 49px;
     height: 35px;
     margin: 62px 120px 62px 240px;
     cursor: pointer;
 }
+
 .header-items {
     width: 322px;
     height: 30px;
@@ -33,6 +35,7 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
 .header-items>p {
     width: 322px;
     height: 30px;
@@ -43,6 +46,7 @@ header {
     font-weight: 500;
     cursor: pointer;
 }
+
 .header-items>p:hover {
     color: blue;
     font-size: 20px;
@@ -60,10 +64,13 @@ header {
     border: 0;
     cursor: pointer;
 }
+
 .header-button:hover {
-    background-color: greenyellow;
+    background-color: green;
     opacity: 0.5;
-}  
+    color: #fff;
+}
+
 .data-img {
     background-image: url(../image/img/image1.jpg);
     position: absolute;
@@ -71,8 +78,8 @@ header {
     height: 468px;
     left: 603px;
     top: 336px;
-
 } 
+
 .data-tex>h1 {
     position: absolute;
     width: 645px;
@@ -84,6 +91,7 @@ header {
     font-size: 80px;
     color: #212353;
 }
+
 .data-tex>p {
     position: absolute;
     width: 380px;
@@ -94,6 +102,7 @@ header {
     font-size: 18px;
     color: #4B5D68;
 }
+
 .data-tex>button {
     position: absolute;
     width: 170px;
@@ -108,44 +117,57 @@ header {
     border: 0;
     cursor: pointer;
 }
+
 .data-btn:hover {
     opacity: 0.5;
 }
+
 .storage-bank {
     position: absolute;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 1117px;
     height: 560px;
     left: 240px;
     top: 903.18px;
     background: rgba(240, 99, 184, 0.15);
     border-radius: 50px;
+    border-top-left-radius: 50px;
+    padding: 20px;
 }
+
 .bank-img {
     width: 477px;
     height: 504px;
-    border-radius: 50px;
+    margin-right: 50px;
 }
+
 .storage-bank-text {
+    border-radius: 50px;
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
-    
+    padding-left: 10px;
+    padding-right: 10px;  
 }
+
 .text-h2 {
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
     color: #212353;
 }
+
 .bank-p {
     width: 474px;
     height: 170px;
     font-weight: 500;
     font-size: 18px;
     color: #4B5D68;
+    line-height: 200%;
+    margin-top: 40px;
 }
+
 .features {
     position: absolute;
     width: 1137px;
@@ -157,6 +179,7 @@ header {
     justify-content: space-between;
     flex-direction: column;
 }
+
 .wrapper-one {
     height: 160px;
     display: flex;
@@ -166,12 +189,14 @@ header {
     align-items: center;
     margin-bottom: 150px;
 }
+
 .wrapper-one>h2 {
     text-align: center;
     font-weight: bold;
     font-size: 40px;
     color: #212353
 }
+
 .wrapper-one>p {
     font-weight: 500;
     font-size: 18px;
@@ -179,14 +204,7 @@ header {
     width: 584px;
     text-align: center;
 }
-.wrapper-wrap {
-    /*width: 1117px;
-    height: 1152px;*/
-    top: 150px; 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+
 .wrapper-two {
     width: 520px;
     height: 355px;
@@ -196,23 +214,25 @@ header {
     justify-content: space-between;
     align-items: center;
     padding-right: 55px;
-
 }
+
 .wrapper-two-img {
     margin-right: 30px;
 }
+
 .wrapper-two-txt{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    
 }
+
 .wrapper-two-txt>h3 {
     font-weight: 400;
     font-size: 24px;
     color: #212353;
     text-align: left;
 }
+
 .wrapper-two-txt>p {
     font-size: 16px;
     font-weight: 400;
@@ -220,6 +240,7 @@ header {
     padding-top: 20px ;
     text-align: left;
 }
+
 .btn-learn {
     font-weight: 900;
     font-size: 16px;
@@ -229,10 +250,12 @@ header {
     text-decoration: none;
     cursor: pointer;
 }
+
 .btn-learn:hover {
-    color: green;
     opacity: 0.5;
+    color: #212353;
 }
+
 .wrapper-three {
     width: 527px;
     height: 303px;
@@ -240,23 +263,25 @@ header {
     justify-content: space-between;
     align-items: center;
     padding-right: 55px;
-
 }
+
 .wrapper-three-img {
     margin-right: 30px;
 }
+
 .wrapper-three-txt{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    
 }
+
 .wrapper-three-txt>h3 {
     font-weight: 400;
     font-size: 24px;
     color: #212353;
     text-align: left;
 }
+
 .wrapper-three-txt>p {
     font-size: 16px;
     font-weight: 400;
@@ -267,28 +292,30 @@ header {
 
 .wrapper-four {
     width: 527px;
-    height: 303px;
+    height: 303px; 
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-right: 55px;
-
 }
+
 .wrapper-four-img {
     margin-right: 30px;
 }
+
 .wrapper-four-txt{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    
 }
+
 .wrapper-four-txt>h3 {
     font-weight: 400;
     font-size: 24px;
     color: #212353;
     text-align: left;
 }
+
 .wrapper-four-txt>p {
     font-size: 16px;
     font-weight: 400;
@@ -306,21 +333,25 @@ header {
     padding-right: 55px;
 
 }
+
 .wrapper-five-img {
     margin-right: 30px;
 }
+
 .wrapper-five-txt{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     
 }
+
 .wrapper-five-txt>h3 {
     font-weight: 400;
     font-size: 24px;
     color: #212353;
     text-align: left;
 }
+
 .wrapper-five-txt>p {
     font-size: 16px;
     font-weight: 400;
@@ -328,12 +359,24 @@ header {
     padding-top: 20px ;
     text-align: left;
 }
+
+.wrapper-container-first {
+    display: flex;
+    justify-content: space-between; 
+    align-items: baseline ;  
+}
+
+.wrapper-container-second {
+    display: flex;
+    justify-content: space-between;
+}
+
 .container {
     position: absolute;
     width: 1118px;
     height: 709px;
     left: 242px;
-    top: 2789px;
+    top: 2700px;
     background: #9C69E2;
     border-radius: 50px;
     display: flex;
@@ -342,11 +385,13 @@ header {
     padding-left: 93px;
     padding-top: 109px;
 }
+
 .testimonials {
     font-weight: bold;
     font-size: 36px;
     color: #FFFFFF;
 }
+
 .blogger {
     border-radius: 20px;
     width: 949px;
@@ -356,11 +401,13 @@ header {
     display: flex;
     justify-content: center;
 }
+
 .person-info {
     width: 132.42px;
     height: 90px;
     margin: 60px 44px 180px 102px;
 }
+
 .blogger-info{
     width: 566px;
     height: 200px;
@@ -369,32 +416,38 @@ header {
     flex-direction: column;
     justify-content: space-around;
 }
+
 .first-name {
     font-weight: 900;
     font-size: 18px;
     color: #212353;
 }
+
 .blogger-info>a {
     font-weight: 500;
     font-size: 14px;
     color: #9C69E2;
     cursor: pointer;
 }
+
 .blogger-info>p {
     font-weight: 400;
     font-size: 18px;
     color: #4B5D68;
 }
+
 .navigation {
     width: 949px;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
 }
+
 .blogger-info>a:hover {
     color: indigo;
     font-size: 18px;
 }
+
 #left-arrow {
     width: 40px;
     height: 14px;
@@ -402,14 +455,17 @@ header {
     color: #FFFFFF;
     cursor: pointer;
 }
+
 #right-arrow {
     text-decoration: none;
     cursor: pointer;
 }
+
 .container-two {
     display: flex;
     justify-content: space-between;
 }
+
 .for-free {
     position: absolute;
     width: 584px;
@@ -421,16 +477,19 @@ header {
     flex-direction: column;
     justify-content: space-between;
 }
+
 .for-free>h2 {
     font-weight: bold;
     font-size: 40px;
     color: #212353;
 }
+
 .for-free>p{
     font-weight: 500;
     font-size: 18px;
     color: #4B5D68;
 }
+
 .first-btn{
     position: absolute;
     width: 170px;
@@ -445,6 +504,7 @@ header {
     border: 0;
     cursor: pointer;
 }
+
 .second-btn{
     position: absolute;
     width: 210px;
@@ -460,27 +520,32 @@ header {
     border: 0;
     cursor: pointer;
 }
+
 .first-btn:hover {
     opacity: 0.5;
 }
+
 .second-btn:hover {
     background-color: teal;
     opacity: 0.5;
 }
+
 .footer-content {
     position: absolute;
     width: 1117px;
     height: 408px;
     left: 240px;
-    top: 4001px;
+    top: 4001px; 
     display: flex;
     justify-content: space-between;
 }
+
 .adress {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
+
 #data-warehouse {
     width: 153px;
     height: 30px;
@@ -488,17 +553,20 @@ header {
     font-size: 22px;
     color: #212353;
 }
+
 .street{
     font-weight: 500;
     font-size: 16px;
     margin-top: 60px; 
     color: #212353;
 }
+
 .street-ave {
     font-weight: 500;
     font-size: 16px; 
     color: #212353;
 }
+
 .nav {
     font-weight: 400;
     font-size: 16px;
@@ -506,10 +574,12 @@ header {
     color: #212353;
     cursor: pointer;
 }
+
 .nav:hover {
     font-size: 18px;
     opacity: 0.7;
 }
+
 #data-warehouse:hover {
     font-size: 24px;
     opacity: 0.7;
@@ -520,6 +590,7 @@ header {
     justify-content: space-between;
     flex-direction: column;
 }
+
 .about>ul>li {
     font-weight: 400;
     font-size: 16px;
@@ -528,15 +599,18 @@ header {
     list-style-type: none;
     cursor: pointer;
 }
+
 .about>ul>li:hover {
     font-size: 18px;
     opacity: 0.7;
 }
+
 ul{
     font-weight: 900;
     font-size: 20px;
     color: #212353;
 }
+
 .help>ul>li {
     font-weight: 400;
     font-size: 16px;
@@ -545,10 +619,12 @@ ul{
     list-style-type: none;
     cursor: pointer;
 }
+
 .help>ul>li:hover {
     font-size: 18px;
     opacity: 0.7;
 }
+
 .media>p {
     font-weight: 900;
     font-size: 20px;
@@ -559,19 +635,21 @@ ul{
 .media>a:hover {
     background-color: darkcyan;
 }
+
 .footer-end>p{
     position: absolute;
     width: 360px;
     height: 50px;
     left: 240px;
-    top: 4354px;
+    top: 4354px; 
     font-size: 18px;
     color: #212353;
 }
+
 .footer-end>img {
     position: absolute;
     width: 60px;
     height: 60px;
     left: 1297px;
-    top: 4349px;
+    top: 4349px; 
 }
