--- a/hw_8/css/style.css
+++ b/hw_8/css/style.css
@@ -2,6 +2,14 @@ body {
     background-color: rgb(24, 24, 24);
     display: flex;
     justify-content:center ;
+    margin-bottom: 50px;
+}
+.container {
+    width: 1400px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .wrapper {
     display: flex;
@@ -15,6 +23,7 @@ body {
     width: 50px;
     height: 50px;
     margin: 15px 20px;
+    text-align: center;
 }
 
 .wrapper>.block:nth-child(4n + 3) {
@@ -23,4 +32,44 @@ body {
 
 .wrapper>.block:nth-child(1n + 21) {
     background-color: blue;
+}
+
+.btn {
+    width: 501px;
+    height: 92px;
+    background: #44D3A8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 100px;
+    border: 0;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    color: #FFFFFF;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.btn::before {
+    content: "";
+    position: absolute;
+    width: 200px;
+    height: 10px;
+    border-top: 2px solid #C4C4C4;
+    border-bottom: 2px solid #C4C4C4;
+    margin-left: -380px;
+}
+
+.btn::after {
+    content: "";
+    position: absolute;
+    width: 200px;
+    height: 10px;
+    border-top: 2px solid #C4C4C4;
+    border-bottom: 2px solid #C4C4C4;
+    margin-left: 180px;
+}
+
+.btn:hover {
+    background-color: green;
+    opacity: 0.5;
 }
